scene.ray_cast() return nothing #50592

Closed
opened 2017-02-04 19:20:51 +01:00 by Cédric · 9 comments
Member

System Information
Win 7
I7-5820K
GTX780 ti (368.69)

Blender Version
Broken: 2.78.4 9f67367
Worked: official 2.78 e8299c8

Short description of error
Using scene.raycast() in python is not working anymore. I don't see any update in the doc, truly sorry if it's not a bug.

Exact steps for others to reproduce the error
Open the file ray_cast.blend, run the srcipt, launch the operator "TestRayCast" in the tabs.
It should return the name of the object and a bgl circle under the mouse if an object is find, but nothing happend.

ray_cast.blend

**System Information** Win 7 I7-5820K GTX780 ti (368.69) **Blender Version** Broken: 2.78.4 9f67367 Worked: official 2.78 e8299c8 **Short description of error** Using scene.raycast() in python is not working anymore. I don't see any update in the doc, truly sorry if it's not a bug. **Exact steps for others to reproduce the error** Open the file ray_cast.blend, run the srcipt, launch the operator "TestRayCast" in the tabs. It should return the name of the object and a bgl circle under the mouse if an object is find, but nothing happend. [ray_cast.blend](https://archive.blender.org/developer/F446010/ray_cast.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Clarkx

Added subscriber: @Clarkx

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2017-02-04 21:57:41 +01:00

Indeed, there are some code problems in Blender involving NULL variables being freed and arguments not used :
I only saw now that sergey tried to warn here blender/blender@62f2c44ffb
I will fix now

Indeed, there are some code problems in Blender involving NULL variables being freed and arguments not used :\ I only saw now that sergey tried to warn here blender/blender@62f2c44ffb I will fix now

Added subscriber: @mont29

Added subscriber: @mont29

@mano-wii looks like something went wrong in snap code?

@mano-wii looks like something went wrong in snap code?

Already fixed the crash due to NULL access in blender/blender@a2c469edc2, btw.

Already fixed the crash due to NULL access in blender/blender@a2c469edc2, btw.

This issue was referenced by blender/blender@47caf343c0

This issue was referenced by blender/blender@47caf343c0ac597cc37048dc40d24a31b94fb238

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#50592
No description provided.