fix T50592: Scene.raycast not working

Ray_start and ray_normal values were being ignored